uing/rawui.nim


proc formAppend*(f: ptr Form; label: cstring; c: ptr Control; stretchy: cint) {.cdecl,
    importc: "uiFormAppend", libui.}

proc formNumChildren*(f: ptr Form): cint {.cdecl, importc: "uiFormNumChildren",
                                      libui.}

proc formDelete*(f: ptr Form; index: cint) {.cdecl, importc: "uiFormDelete",
                                       libui.}

proc formPadded*(f: ptr Form): cint {.cdecl, importc: "uiFormPadded", libui.}

proc formSetPadded*(f: ptr Form; padded: cint) {.cdecl, importc: "uiFormSetPadded",
    libui.}

proc newForm*(): ptr Form {.cdecl, importc: "uiNewForm", libui.}

type
  Align* {.size: sizeof(cint).} = enum
    ## Alignment specifiers to define placement within the reserved area.
    ## 
    ## Used in `Grid`
    
    AlignFill,   ## Fill area
    AlignStart,  ## Place at start.
    AlignCenter, ## Place in center
    AlignEnd     ## Place at end

  At* {.size: sizeof(cint).} = enum
    ## Placement specifier to define placement in relation to another widget.
    ## 
    ## Used in `Grid`
    
    AtLeading,  ## Place before widget. 
    AtTop,      ## Place above widget. 
    AtTrailing, ## Place behind widget. 
    AtBottom    ## Place below widget.


type
  Grid* = object of Control

template grid*(this: untyped): untyped =
  (cast[ptr Grid]((this)))


proc gridAppend*(g: ptr Grid; c: ptr Control; left: cint; top: cint; xspan: cint;
                yspan: cint; hexpand: cint; halign: Align; vexpand: cint; valign: Align) {.
    cdecl, importc: "uiGridAppend", libui.}

proc gridInsertAt*(g: ptr Grid; c: ptr Control; existing: ptr Control; at: At; xspan: cint;
                  yspan: cint; hexpand: cint; halign: Align; vexpand: cint;
                  valign: Align) {.cdecl, importc: "uiGridInsertAt", libui.}

proc gridPadded*(g: ptr Grid): cint {.cdecl, importc: "uiGridPadded", libui.}

proc gridSetPadded*(g: ptr Grid; padded: cint) {.cdecl, importc: "uiGridSetPadded",
    libui.}

proc newGrid*(): ptr Grid {.cdecl, importc: "uiNewGrid", libui.}

type
  Image* = object

proc newImage*(width: cdouble; height: cdouble): ptr Image {.cdecl,
    importc: "uiNewImage", libui.}

proc freeImage*(i: ptr Image) {.cdecl, importc: "uiFreeImage", libui.}

proc imageAppend*(i: ptr Image; pixels: pointer; pixelWidth: cint; pixelHeight: cint;
                 byteStride: cint) {.cdecl, importc: "uiImageAppend", libui.}

type
  TableValueType* {.size: sizeof(cint).} = enum
    ## `TableValue <#TableValue>`_ types.

    TableValueTypeString, 
    TableValueTypeImage, 
    TableValueTypeInt, 
    TableValueTypeColor 

  Color* {.bycopy.} = object
    r* : cdouble
    g* : cdouble
    b* : cdouble
    a* : cdouble

  TableValueInner* {.bycopy, union.} = object
    str*   : cstring
    img*   : ptr Image
    i*     : cint
    color* : Color

  TableValue* {.bycopy.} = object
    kind* : TableValueType
    u*    : TableValueInner


proc freeTableValue*(v: ptr TableValue) {.cdecl, importc: "uiFreeTableValue",
                                      libui.}

proc tableValueGetType*(v: ptr TableValue): TableValueType {.cdecl,
    importc: "uiTableValueGetType", libui.}

proc newTableValueString*(str: cstring): ptr TableValue {.cdecl,
    importc: "uiNewTableValueString", libui.}

proc tableValueString*(v: ptr TableValue): cstring {.cdecl,
    importc: "uiTableValueString", libui.}

proc newTableValueImage*(img: ptr Image): ptr TableValue {.cdecl,
    importc: "uiNewTableValueImage", libui.}

proc tableValueImage*(v: ptr TableValue): ptr Image {.cdecl,
    importc: "uiTableValueImage", libui.}

proc newTableValueInt*(i: cint): ptr TableValue {.cdecl,
    importc: "uiNewTableValueInt", libui.}

proc tableValueInt*(v: ptr TableValue): cint {.cdecl, importc: "uiTableValueInt",
    libui.}

proc newTableValueColor*(r: cdouble; g: cdouble; b: cdouble; a: cdouble): ptr TableValue {.
    cdecl, importc: "uiNewTableValueColor", libui.}

proc tableValueColor*(v: ptr TableValue; r: ptr cdouble; g: ptr cdouble; b: ptr cdouble;
                     a: ptr cdouble) {.cdecl, importc: "uiTableValueColor",
                                    libui.}

type
  SortIndicator* {.size: sizeof(cint).} = enum
    SortIndicatorNone, 
    SortIndicatorAscending, 
    SortIndicatorDescending

type
  TableModel* = pointer

type
  TableModelHandler* {.bycopy.} = object
    ## Developer defined methods for data retrieval and setting.
    ## 
    ## These methods get called whenever the associated `TableModel` needs to
    ## retrieve data or a `Table` wants to set data.
    ## 
    ## .. warning:: These methods are **NOT** allowed to change as soon as the
    ##          `TableModelHandler` is associated with a `TableModel`.

    numColumns*  : proc (a1: ptr TableModelHandler; a2: ptr TableModel): cint {.cdecl.} ## \
    ## Returns the number of columns in the `TableModel`.
    ##
    ## .. warning:: This value **MUST** remain constant throughout the lifetime of the `TableModel`.
    ## 
    ## .. warning:: This method is not guaranteed to be called depending on the system

    columnType*  : proc (a1: ptr TableModelHandler; a2: ptr TableModel; col: cint): TableValueType {.cdecl.} ## \
    ## Returns the column type in for of a `TableValueType`.
    ##
    ## .. warning:: This value **MUST** remain constant throughout the lifetime of the `TableModel`.
    ## 
    ## .. warning:: This method is not guaranteed to be called depending on the system
                                                                                                                
    numRows*     : proc (a1: ptr TableModelHandler; a2: ptr TableModel) : cint {.cdecl.} ## \ 
    ## Returns the number of rows in the `TableModel`.

    cellValue*   : proc (mh: ptr TableModelHandler; m: ptr TableModel; row: cint; col: cint): ptr TableValue {.cdecl.} ## \
    ## Returns the cell value for (row, col).
    ## 
    ## Make sure to use the `TableValue` constructors. The returned value
    ## must match the `TableValueType` defined in `columnType()`.
    ## 
    ## Some columns may return `nil` as a special value. Refer to the
    ## appropriate `addColumn()` documentation.
    ## 
    ## .. note:: `TableValue` objects are automatically freed when requested by
    ##       a `Table`.

    setCellValue*: proc (a1: ptr TableModelHandler; a2: ptr TableModel; row: cint; col: cint; a3: ptr TableValue) {.cdecl.} ## \
    ## Sets the cell value for (row, column).
    ## It is up to the handler to decide what to do with the value: change
    ## the model or reject the change, keeping the old value.
    ## 
    ## Some columns may call this function with `nil` as a special value.
    ## Refer to the appropriate `addColumn()` documentation.
    ## 
    ## .. note:: `TableValue` objects are automatically freed upon return when
    ##        set by a `Table`.

proc newTableModel*(mh: ptr TableModelHandler): ptr TableModel {.cdecl,
    importc: "uiNewTableModel", libui.}

proc freeTableModel*(m: ptr TableModel) {.cdecl, importc: "uiFreeTableModel",
                                      libui.}

proc tableModelRowInserted*(m: ptr TableModel; newIndex: cint) {.cdecl,
    importc: "uiTableModelRowInserted", libui.}

proc tableModelRowChanged*(m: ptr TableModel; index: cint) {.cdecl,
    importc: "uiTableModelRowChanged", libui.}

proc tableModelRowDeleted*(m: ptr TableModel; oldIndex: cint) {.cdecl,
    importc: "uiTableModelRowDeleted", libui.}

const
  TableModelColumnNeverEditable*  = (-1) ## \
  ## Parameter to editable model columns to signify all rows are never editable.
  
  TableModelColumnAlwaysEditable* = (-2) ## \
  ## Parameter to editable model columns to signify all rows are always editable.

type
  Table* = object of Control

  TableTextColumnOptionalParams* {.bycopy.} = object
    ## Optional parameters to control the appearance of text columns.
    
    colorModelColumn*: cint

  TableParams* {.bycopy.} = object
    ## Table parameters passed to `newTable()`.
    
    model*                         : ptr TableModel ## \
    ## Model holding the data to be displayed. This can **NOT** be `nil`.

    rowBackgroundColorModelColumn* : cint ## \
    ## `TableModel` column that defines background color for each row,
    ## 
    ## `TableValue.color` Background color, `nil` to use the default
    ## background color for that row.
    ## 
    ## `-1` to use the default background color for all rows.

template table*(this: untyped): untyped =
  (cast[ptr Table]((this)))


proc tableAppendTextColumn*(t: ptr Table; name: cstring; textModelColumn: cint;
                           textEditableModelColumn: cint;
                           textParams: ptr TableTextColumnOptionalParams) {.cdecl,
    importc: "uiTableAppendTextColumn", libui.}

proc tableAppendImageColumn*(t: ptr Table; name: cstring; imageModelColumn: cint) {.
    cdecl, importc: "uiTableAppendImageColumn", libui.}

proc tableAppendImageTextColumn*(t: ptr Table; name: cstring; imageModelColumn: cint;
                                textModelColumn: cint;
                                textEditableModelColumn: cint;
                                textParams: ptr TableTextColumnOptionalParams) {.
    cdecl, importc: "uiTableAppendImageTextColumn", libui.}

proc tableAppendCheckboxColumn*(t: ptr Table; name: cstring;
                               checkboxModelColumn: cint;
                               checkboxEditableModelColumn: cint) {.cdecl,
    importc: "uiTableAppendCheckboxColumn", libui.}

proc tableAppendCheckboxTextColumn*(t: ptr Table; name: cstring;
                                   checkboxModelColumn: cint;
                                   checkboxEditableModelColumn: cint;
                                   textModelColumn: cint;
                                   textEditableModelColumn: cint; textParams: ptr TableTextColumnOptionalParams) {.
    cdecl, importc: "uiTableAppendCheckboxTextColumn", libui.}

proc tableAppendProgressBarColumn*(t: ptr Table; name: cstring;
                                  progressModelColumn: cint) {.cdecl,
    importc: "uiTableAppendProgressBarColumn", libui.}

proc tableAppendButtonColumn*(t: ptr Table; name: cstring; buttonModelColumn: cint;
                             buttonClickableModelColumn: cint) {.cdecl,
    importc: "uiTableAppendButtonColumn", libui.}

proc tableHeaderVisible*(t: ptr Table): cint {.cdecl, importc: "uiTableHeaderVisible",
    libui.}

proc tableHeaderSetVisible*(t: ptr Table; visible: cint) {.cdecl,
    importc: "uiTableHeaderSetVisible", libui.}

proc newTable*(params: ptr TableParams): ptr Table {.cdecl, importc: "uiNewTable",
    libui.}

proc tableOnRowClicked*(t: ptr Table; f: proc (t: ptr Table; row: cint; data: pointer) {.
    cdecl.}; data: pointer) {.cdecl, importc: "uiTableOnRowClicked", libui.}

proc tableOnRowDoubleClicked*(t: ptr Table; f: proc (t: ptr Table; row: cint; data: pointer) {.
    cdecl.}; data: pointer) {.cdecl, importc: "uiTableOnRowDoubleClicked",
                           libui.}

proc tableHeaderSetSortIndicator*(t: ptr Table; column: cint; indicator: SortIndicator) {.
    cdecl, importc: "uiTableHeaderSetSortIndicator", libui.}

proc tableHeaderSortIndicator*(t: ptr Table; column: cint): SortIndicator {.cdecl,
    importc: "uiTableHeaderSortIndicator", libui.}

proc tableHeaderOnClicked*(t: ptr Table; f: proc (sender: ptr Table; column: cint;
    senderData: pointer) {.cdecl.}; data: pointer) {.cdecl,
    importc: "uiTableHeaderOnClicked", libui.}

proc tableColumnWidth*(t: ptr Table; column: cint): cint {.cdecl,
    importc: "uiTableColumnWidth", libui.}

proc tableColumnSetWidth*(t: ptr Table; column: cint; width: cint) {.cdecl,
    importc: "uiTableColumnSetWidth", libui.}
